--- a/angular.json
+++ b/angular.json
@@ -14,7 +14,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/crud",
-            "baseHref": "/dist/crud/",
+            "baseHref": "https://digitalbrain798.github.io/PruebaAngular/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
